--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Landon Dorrier | UX Design + Development</title>
 
     <!-- Open Graph -->
@@ -19,45 +20,60 @@
     <!-- Site container -->
     <div class="site-container">
 
-      <!-- Graphic elements -->
+      <!-- ABSOLUTE: Graphic elements -->
       <div class="noise"></div>
       <div class="radial"></div>
 
-      <!-- Site header -->
-      <header class="site-header section">
-        <div class="bio">
-          <h1 class="lkd">Landon K. Dorrier</h1>
-          <ul class="list-style-none">
-            <li>Senior Web Developer</li>
-            <li><a href="https://journeygroup.com">Journey Group</a></li>
-          </ul>
-        </div>
-        <nav class="main-nav">
-          <ul class="list-style-none">
-            <li><a href="https://www.behance.net/landonkd">Behance</a></li>
-            <li><a href="https://github.com/landonkd">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/pub/landon-dorrier/51/a76/586">LinkedIn</a></li>
-          </ul>
-        </nav>
-      </header><!-- .site-header -->
+      <!-- TOP: Site header -->
+      <div class="site-top">
+        <header class="site-header section">
+          <div class="bio">
+            <h1 class="nameplate">Landon K. Dorrier</h1>
+            <ul class="list-style-none">
+              <li>Senior Web Developer</li>
+              <li><a href="https://journeygroup.com">Journey Group</a></li>
+            </ul>
+          </div>
+          <nav class="main-nav">
+            <ul class="list-style-none">
+              <li><a href="https://www.behance.net/landonkd">Behance</a></li>
+              <li><a href="https://github.com/landonkd">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/pub/landon-dorrier/51/a76/586">LinkedIn</a></li>
+            </ul>
+          </nav>
+        </header><!-- .site-header -->
+      </div><!-- .site-top -->
   
-      <!-- Main -->
-      <main class="hero">
-        <h2 class="hero-headline">
-          <div class="nowrap">UX Design + </div>
-          <div class="nowrap">Development</div>
-        </h2>
-      </main><!-- .main -->
+      <!-- MIDDLE: Main -->
+      <div class="site-middle">
+        <main class="hero">
+          <h2 class="hero-headline">
+            <div class="nowrap">UX Design + </div>
+            <div class="nowrap">Development</div>
+          </h2>
+        </main><!-- .main -->
+      </div><!-- .site-middle-->
   
-      <!-- Footer -->
-      <footer class="site-footer section">
-        <p class="copyright">© 2023 Landon K. Dorrier · Charlottesville, VA</p>
-      </footer><!-- .site-footer -->
+      <!-- BOTTOM: Footer -->
+      <div class="site-bottom">
+        <section class="section section--bottom-nav">
+          <nav class="main-nav">
+            <ul class="list-style-none">
+              <li><a href="https://www.behance.net/landonkd">Behance</a></li>
+              <li><a href="https://github.com/landonkd">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/pub/landon-dorrier/51/a76/586">LinkedIn</a></li>
+            </ul>
+          </nav>
+        </section>
+        <footer class="site-footer section">
+          <p class="copyright">© 2023 Landon K. Dorrier · Charlottesville, VA</p>
+        </footer><!-- .site-footer -->
+      </div><!-- .site-bottom -->
 
     </div><!-- .site-container -->
 
     <!-- JS Scripts -->
-    <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/js/main.js"></script> -->
   </body>
 
 </html>
