feat: add meta desc; update to use 100svh; copyright font size

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <title>Landon Dorrier | UX Design + Development</title>
+    <title>Landon Dorrier</title>
+    <meta name="description" content="Working to make the web a better place.">
 
     <!-- Open Graph -->
 
