feat: move radial relative to mouse position

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="site-container">
 
       <!-- ABSOLUTE: Graphic elements -->
-      <div class="noise"></div>
       <div class="radial"></div>
+      <div class="noise"></div>
 
       <!-- TOP: Site header -->
       <div class="site-top">
@@ -75,7 +75,7 @@
     </div><!-- .site-container -->
 
     <!-- JS Scripts -->
-    <!-- <script src="assets/js/main.js"></script> -->
+    <script src="assets/js/main.js"></script>
   </body>
 
 </html>
