feat: change headline

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Landon Dorrier</title>
     <meta name="description" content="Working to make the web a better place.">
 
-    <!-- Open Graph -->
+    <!-- Open Graph? -->
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -50,8 +50,8 @@
       <div class="site-middle">
         <main class="hero">
           <h2 class="hero-headline">
-            <div class="nowrap">UX Design + </div>
-            <div class="nowrap">Development</div>
+            <span class="nowrap">Designer +</span>
+            <span class="nowrap">Developer</span>
           </h2>
         </main><!-- .main -->
       </div><!-- .site-middle-->
@@ -59,6 +59,7 @@
       <!-- BOTTOM: Footer -->
       <div class="site-bottom">
         <section class="section section--bottom-nav">
+          <h2 class="sr-only">Contact</h2>
           <nav class="main-nav">
             <ul class="list-style-none">
               <li><a href="https://www.behance.net/landonkd">Behance</a></li>
