feat: preload web fonts; add font-display: swap; edit hero text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <!-- Open Graph? -->
 
+    <!-- Preload Fonts -->
+    <link rel="preload" href="/fonts/JetBrainsMono/JetBrainsMono-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/JetBrainsMono/JetBrainsMono-Italic.woff2" as="font" type="font/woff2" crossorigin>
+
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -50,8 +54,8 @@
       <div class="site-middle">
         <main class="hero">
           <h2 class="hero-headline">
-            <span class="nowrap">Designer +</span>
-            <span class="nowrap">Developer</span>
+            <span class="nowrap">Designer</span>
+            <span class="nowrap"><em>+</em> Developer</span>
           </h2>
         </main><!-- .main -->
       </div><!-- .site-middle-->
