fix: remove light color theme; update text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <title>Landon Dorrier</title>
+    <title>Landon K. Dorrier</title>
     <meta name="description" content="Working to make the web a better place.">
 
     <!-- Open Graph? -->
@@ -36,7 +36,7 @@
           <div class="bio">
             <h1 class="nameplate">Landon K. Dorrier</h1>
             <ul class="list-style-none">
-              <li>Senior Web Developer</li>
+              <li>Web Developer</li>
               <li><a href="https://journeygroup.com">Journey Group</a></li>
             </ul>
           </div>
