feat: tweak home load animatino

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- ABSOLUTE: Graphic elements -->
     <canvas class="noise"></canvas>
-    <div class="screen-wipe screen-wipe--2"></div>
+    <!-- <div class="screen-wipe screen-wipe--2"></div> -->
     <div class="screen-wipe"></div>
 
     <!-- Site container -->
