feat: design tweaks

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Preload Fonts -->
     <link rel="preload" href="/assets/fonts/EditorialNew/PPEditorialNew-UltraboldItalic.otf" as="font" type="font/otf" crossorigin>
+    <!-- <link rel="preload" href="/assets/fonts/NeueMontreal/PPNeueMontreal-Bold.otf" as="font" type="font/otf" crossorigin> -->
     <link rel="preload" href="/assets/fonts/EditorialNew/PPEditorialNew-Italic.otf" as="font" type="font/otf" crossorigin>
 
     <!-- CSS -->
@@ -24,7 +25,7 @@
   <body>
 
     <!-- ABSOLUTE: Graphic elements -->
-    <canvas class="noise"></canvas>
+    <div class="noise"></div>
     <div class="screen-wipe screen-wipe--3"></div>
     <div class="screen-wipe screen-wipe--2"></div>
     <div class="screen-wipe"></div>
@@ -40,11 +41,11 @@
           <!-- LANDON -->
           <!-- L -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08.8v153.6h87.04V180H.48V.8h25.6Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08.8v153.6h87.04V180H.48V.8h25.6Z" fill="currentColor"/></svg>
           </div>
           <!-- A -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08 180H.48v-58.88L44 .8h25.6l43.52 120.32V180h-25.6v-41.472H26.08V180Zm4.608-67.072h52.224l-25.856-71.68h-.512l-25.856 71.68Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08 180H.48v-58.88L44 .8h25.6l43.52 120.32V180h-25.6v-41.472H26.08V180Zm4.608-67.072h52.224l-25.856-71.68h-.512l-25.856 71.68Z" fill="currentColor"/></svg>
           </div>
           <!-- SPACER -->
           <div class="letter letter--spacer"></div>
@@ -52,68 +53,68 @@
           <div class="letter letter--spacer"></div>
           <!-- N -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M87.52.8h25.6V180H76L26.08 43.808V180H.48V.8H37.6l49.92 136.192V.8Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M87.52.8h25.6V180H76L26.08 43.808V180H.48V.8H37.6l49.92 136.192V.8Z" fill="currentColor"/></svg>
           </div>
           <!-- D -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M67.04.8c25.344 0 46.08 20.48 46.08 46.08v86.784c0 25.344-20.736 46.336-46.08 46.336H.48V.8h66.56ZM26.08 154.144h40.96c11.264 0 20.48-9.216 20.48-20.48V46.88c0-11.264-8.96-20.48-20.48-20.48H26.08v127.744Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M67.04.8c25.344 0 46.08 20.48 46.08 46.08v86.784c0 25.344-20.736 46.336-46.08 46.336H.48V.8h66.56ZM26.08 154.144h40.96c11.264 0 20.48-9.216 20.48-20.48V46.88c0-11.264-8.96-20.48-20.48-20.48H26.08v127.744Z" fill="currentColor"/></svg>
           </div>
           <!-- O -->
           <div class="letter letter--o">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M59.928 180.24c-41.904 0-59.184-31.536-59.184-66.096 0-56.592 44.28-113.4 101.088-113.4 41.904 0 58.968 31.32 58.968 66.096 0 56.592-44.064 113.4-100.872 113.4Zm.432-12.096c27.864 0 56.376-85.32 56.376-129.384 0-17.064-4.752-25.92-15.12-25.92-28.296 0-56.592 85.32-56.592 129.384 0 17.064 4.536 25.92 15.336 25.92Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M59.928 180.24c-41.904 0-59.184-31.536-59.184-66.096 0-56.592 44.28-113.4 101.088-113.4 41.904 0 58.968 31.32 58.968 66.096 0 56.592-44.064 113.4-100.872 113.4Zm.432-12.096c27.864 0 56.376-85.32 56.376-129.384 0-17.064-4.752-25.92-15.12-25.92-28.296 0-56.592 85.32-56.592 129.384 0 17.064 4.536 25.92 15.336 25.92Z" fill="currentColor"/></svg>
           </div>
           <!-- N -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M87.52.8h25.6V180H76L26.08 43.808V180H.48V.8H37.6l49.92 136.192V.8Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M87.52.8h25.6V180H76L26.08 43.808V180H.48V.8H37.6l49.92 136.192V.8Z" fill="currentColor"/></svg>
           </div>
           <div class="letter letter--spacer"></div>
 
           <!-- KYLE -->
           <!-- K -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08 180H.48V.8h25.6v76.8h9.728L82.912.8h30.208L58.08 90.4l55.04 89.6H82.912l-47.104-76.8H26.08V180Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08 180H.48V.8h25.6v76.8h9.728L82.912.8h30.208L58.08 90.4l55.04 89.6H82.912l-47.104-76.8H26.08V180Z" fill="currentColor"/></svg>
           </div>
           <!-- SPACER -->
           <div class="letter letter--spacer"></div>
           <!-- Y -->
           <!-- <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M44 180v-63.744L.48 62.24V.8h25.6v52.224l30.208 37.632h.512l30.72-40.192V.8h25.6v58.368L69.6 116.256V180H44Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M44 180v-63.744L.48 62.24V.8h25.6v52.224l30.208 37.632h.512l30.72-40.192V.8h25.6v58.368L69.6 116.256V180H44Z" fill="currentColor"/></svg>
           </div> -->
           <!-- L -->
           <!-- <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08.8v153.6h87.04V180H.48V.8h25.6Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M26.08.8v153.6h87.04V180H.48V.8h25.6Z" fill="currentColor"/></svg>
           </div> -->
           <!-- E -->
           <!-- <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12.8v25.6H26.08v46.848h76.8v25.6h-76.8V154.4h87.04V180H.48V.8h112.64Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12.8v25.6H26.08v46.848h76.8v25.6h-76.8V154.4h87.04V180H.48V.8h112.64Z" fill="currentColor"/></svg>
           </div> -->
   
           <!-- DORRIER -->
           <!-- D -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M67.04.8c25.344 0 46.08 20.48 46.08 46.08v86.784c0 25.344-20.736 46.336-46.08 46.336H.48V.8h66.56ZM26.08 154.144h40.96c11.264 0 20.48-9.216 20.48-20.48V46.88c0-11.264-8.96-20.48-20.48-20.48H26.08v127.744Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M67.04.8c25.344 0 46.08 20.48 46.08 46.08v86.784c0 25.344-20.736 46.336-46.08 46.336H.48V.8h66.56ZM26.08 154.144h40.96c11.264 0 20.48-9.216 20.48-20.48V46.88c0-11.264-8.96-20.48-20.48-20.48H26.08v127.744Z" fill="currentColor"/></svg>
           </div>
           <!-- SPACER -->
           <div class="letter letter--spacer"></div>
           <!-- O -->
           <div class="letter letter--o">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M59.928 180.24c-41.904 0-59.184-31.536-59.184-66.096 0-56.592 44.28-113.4 101.088-113.4 41.904 0 58.968 31.32 58.968 66.096 0 56.592-44.064 113.4-100.872 113.4Zm.432-12.096c27.864 0 56.376-85.32 56.376-129.384 0-17.064-4.752-25.92-15.12-25.92-28.296 0-56.592 85.32-56.592 129.384 0 17.064 4.536 25.92 15.336 25.92Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M59.928 180.24c-41.904 0-59.184-31.536-59.184-66.096 0-56.592 44.28-113.4 101.088-113.4 41.904 0 58.968 31.32 58.968 66.096 0 56.592-44.064 113.4-100.872 113.4Zm.432-12.096c27.864 0 56.376-85.32 56.376-129.384 0-17.064-4.752-25.92-15.12-25.92-28.296 0-56.592 85.32-56.592 129.384 0 17.064 4.536 25.92 15.336 25.92Z" fill="currentColor"/></svg>
           </div>
           <!-- R -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
           </div>
           <!-- SPACER -->
           <!-- <div class="letter letter--spacer"></div> -->
           <!-- R -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
           </div>
           <!-- SPACER -->
           <!-- <div class="letter letter--spacer"></div> -->
           <!-- I -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M.48.8h112.64v25.6H69.6v128h43.52V180H.48v-25.6H44v-128H.48V.8Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M.48.8h112.64v25.6H69.6v128h43.52V180H.48v-25.6H44v-128H.48V.8Z" fill="currentColor"/></svg>
           </div>
           <!-- SPACER -->
           <div class="letter letter--spacer"></div>
@@ -121,11 +122,11 @@
           <div class="letter letter--spacer"></div>
           <!-- E -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12.8v25.6H26.08v46.848h76.8v25.6h-76.8V154.4h87.04V180H.48V.8h112.64Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12.8v25.6H26.08v46.848h76.8v25.6h-76.8V154.4h87.04V180H.48V.8h112.64Z" fill="currentColor"/></svg>
           </div>
           <!-- R -->
           <div class="letter">
-            <svg aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
           </div>
 
         </div>
@@ -133,22 +134,18 @@
         <!-- Body content -->
         <div class="grid__main-content">
           <section class="section">
-            <h1 class="section__heading">About</h1>
+            <h1 class="section__heading">Landon K. Dorrier</h1>
             <ul class="list-style-none">
-              <li>Landon K. Dorrier</li>
-              <li>Charlottesville—VA</li>
               <li>Husband + Father + Son</li>
-            </ul>
-          </section>
-          <section class="section">
-            <h1 class="section__heading">Craft</h1>
-            <ul class="list-style-none">
               <li>Digital Designer + Developer</li>
+            </ul>
+            <ul class="list-style-none">
               <li>Part of the great team at <a href="https://www.journeygroup.com/">Journey Group</a></li>
+              <li>Charlottesville—VA</li>
             </ul>
           </section>
           <section class="section">
-            <h1 class="section__heading">Social</h1>
+            <h1 class="section__heading">Hyperlinks</h1>
             <ul class="list-style-none">
               <li><a href="https://www.behance.net/landonkd">Behance</a></li>
               <li><a href="https://github.com/landonkd">GitHub</a></li>
@@ -162,7 +159,7 @@
     </div><!-- .site-container -->
 
     <!-- JS Scripts -->
-    <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/js/main.js"></script> -->
   </body>
 
 </html>
