feat: site update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <!-- ABSOLUTE: Graphic elements -->
-    <div class="noise"></div>
+    <!-- <div class="noise"></div> -->
     <div class="screen-wipe screen-wipe--3"></div>
     <div class="screen-wipe screen-wipe--2"></div>
     <div class="screen-wipe"></div>
@@ -61,7 +61,7 @@
           </div>
           <!-- O -->
           <div class="letter letter--o">
-            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M59.928 180.24c-41.904 0-59.184-31.536-59.184-66.096 0-56.592 44.28-113.4 101.088-113.4 41.904 0 58.968 31.32 58.968 66.096 0 56.592-44.064 113.4-100.872 113.4Zm.432-12.096c27.864 0 56.376-85.32 56.376-129.384 0-17.064-4.752-25.92-15.12-25.92-28.296 0-56.592 85.32-56.592 129.384 0 17.064 4.536 25.92 15.336 25.92Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M48.078 181.488c-32.7 0-47.306-25.724-47.306-57.988C.772 63.768 46.988.112 96.692.112c32.7 0 47.088 25.724 47.088 57.77 0 59.95-45.998 123.606-95.702 123.606Zm3.052-9.156c33.136 0 68.452-72.376 68.452-124.696 0-22.672-6.976-38.586-25.942-38.586-33.136 0-68.452 72.594-68.452 124.914 0 22.454 6.758 38.368 25.942 38.368Z" fill="currentColor"/></svg>
           </div>
           <!-- N -->
           <div class="letter">
@@ -98,7 +98,7 @@
           <div class="letter letter--spacer"></div>
           <!-- O -->
           <div class="letter letter--o">
-            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M59.928 180.24c-41.904 0-59.184-31.536-59.184-66.096 0-56.592 44.28-113.4 101.088-113.4 41.904 0 58.968 31.32 58.968 66.096 0 56.592-44.064 113.4-100.872 113.4Zm.432-12.096c27.864 0 56.376-85.32 56.376-129.384 0-17.064-4.752-25.92-15.12-25.92-28.296 0-56.592 85.32-56.592 129.384 0 17.064 4.536 25.92 15.336 25.92Z" fill="currentColor"/></svg>
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M48.078 181.488c-32.7 0-47.306-25.724-47.306-57.988C.772 63.768 46.988.112 96.692.112c32.7 0 47.088 25.724 47.088 57.77 0 59.95-45.998 123.606-95.702 123.606Zm3.052-9.156c33.136 0 68.452-72.376 68.452-124.696 0-22.672-6.976-38.586-25.942-38.586-33.136 0-68.452 72.594-68.452 124.914 0 22.454 6.758 38.368 25.942 38.368Z" fill="currentColor"/></svg>
           </div>
           <!-- R -->
           <div class="letter">
@@ -132,7 +132,7 @@
         </div>
 
         <!-- Body content -->
-        <div class="grid__main-content">
+        <div class="grid__main">
           <section class="section">
             <h1 class="section__heading">Landon K. Dorrier</h1>
             <ul class="list-style-none">
@@ -152,6 +152,58 @@
               <li><a href="https://www.linkedin.com/pub/letter--dorrier/51/a76/586">LinkedIn</a></li>
             </ul>
           </section>
+        </div>
+
+
+
+
+
+
+
+        <!-- Name -->
+        <div class="grid__name">
+          <!-- DORRIER -->
+          <!-- SPACER -->
+          <div class="letter letter--spacer"></div>
+          <!-- SPACER -->
+          <div class="letter letter--spacer"></div>
+          <!-- D -->
+          <div class="letter">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M67.04.8c25.344 0 46.08 20.48 46.08 46.08v86.784c0 25.344-20.736 46.336-46.08 46.336H.48V.8h66.56ZM26.08 154.144h40.96c11.264 0 20.48-9.216 20.48-20.48V46.88c0-11.264-8.96-20.48-20.48-20.48H26.08v127.744Z" fill="currentColor"/></svg>
+          </div>
+          <!-- O -->
+          <div class="letter letter--o">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 161 181"><path d="M48.078 181.488c-32.7 0-47.306-25.724-47.306-57.988C.772 63.768 46.988.112 96.692.112c32.7 0 47.088 25.724 47.088 57.77 0 59.95-45.998 123.606-95.702 123.606Zm3.052-9.156c33.136 0 68.452-72.376 68.452-124.696 0-22.672-6.976-38.586-25.942-38.586-33.136 0-68.452 72.594-68.452 124.914 0 22.454 6.758 38.368 25.942 38.368Z" fill="currentColor"/></svg>
+          </div>
+          <!-- R -->
+          <div class="letter">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
+          </div>
+          <!-- SPACER -->
+          <div class="letter letter--spacer"></div>
+          <!-- SPACER -->
+          <div class="letter letter--spacer"></div>
+          <!-- R -->
+          <div class="letter">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
+          </div>
+          <!-- SPACER -->
+          <!-- <div class="letter letter--spacer"></div> -->
+          <!-- I -->
+          <div class="letter">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M.48.8h112.64v25.6H69.6v128h43.52V180H.48v-25.6H44v-128H.48V.8Z" fill="currentColor"/></svg>
+          </div>
+          <!-- E -->
+          <div class="letter">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12.8v25.6H26.08v46.848h76.8v25.6h-76.8V154.4h87.04V180H.48V.8h112.64Z" fill="currentColor"/></svg>
+          </div>
+          <!-- SPACER -->
+          <div class="letter letter--spacer"></div>
+          <!-- R -->
+          <div class="letter">
+            <svg class="animate-in" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 180"><path d="M113.12 180H84.96l-32.512-71.68H26.08V180H.48V.8h66.56c25.6 0 46.08 20.48 46.08 46.08v15.36c0 21.248-14.08 38.912-33.536 44.288L113.12 180ZM26.08 82.72h40.96c11.52 0 20.48-8.96 20.48-20.48V46.88c0-11.52-8.96-20.48-20.48-20.48H26.08v56.32Z" fill="currentColor"/></svg>
+          </div>
+
         </div>
 
       </main><!-- .main -->
